--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a {
+            border: solid blueviolet 3px;
+            padding: 5px;
+            /* 線を消す */
+            text-decoration-line: none;
+        }
+    </style>
 </head>
+
 <body>
-    <a href="form.html">入力フォームへ</a>
+    <div>
+        <a href="form.html">画面遷移</a>
+        <p>ダミーテキスト</p>
+    </div>
+
 </body>
+
 </html>
