--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         a {
-            border: solid blueviolet 3px;
+            border: solid pink 3px;
             padding: 5px;
             /* 線を消す */
             text-decoration-line: none;
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    <a href="form.html">画面遷移</a>
 </body>
 
 </html>
